--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: "_Applied Predictive Modeling_ Blog"
 listing:
   contents: posts
   date-format: YYYY-MM-DD
@@ -12,14 +11,9 @@ page-layout: full
 title-block-banner: true
 ---
 
-This is a continuation of the blog that we made for our previous book ([original blog location](http://appliedpredictivemodeling.com/blog)). New posts, as of 2024, can be found here.
+This is a continuation of [original blog](http://appliedpredictivemodeling.com/blog) that we made for our [previous book](http://appliedpredictivemodeling.com). New posts, as of 2024, can be found here. The posts here are not associated with our employers; opinions are our own. 
 
-The posts here are not associated with our employers; opinions are our own. 
-
-Other places that we create content: 
-
-- Tidyverse [blog](https://www.tidyverse.org/blog/)
-- `tidymodels.org`'s [_Learn_ pages](https://tidymodels.org/learn)
+Other places that we create content: the Tidyverse [blog](https://www.tidyverse.org/blog/) and `tidymodels.org`'s [_Learn_ pages](https://tidymodels.org/learn).
 
 <br><br>
 
