--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,26 @@
 ---
-title: ""
-image: profile.jpg
-about:
-  template: jolla
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
-    - icon: github
-      text: Github
-      href: https://github.com
-
+title: "About"
 ---
 
-About this blog
+The main contribors to this blog are Max Kuhn and Kjell Johnson. Together, they wrote the book [_Applied Predictive Modeling_](http://appliedpredictivemodeling.com/), which won the Ziegel award from the American Statistical Association, which recognizes the best book reviewed in Technometrics in 2015. They have also co-written [_Feature Engineering and Selection_](https://bookdown.org/max/FES/). 
+
+### Max Kuhn
+
+Max Kuhn is a software engineer at [Posit PBC](https://posit.co/) (formerly known as RStudio Inc) where he is working on improving R’s modeling capabilities and maintaining about 30 packages, including [caret](https://cran.r-project.org/web/packages/caret/index.html). He has a Ph.D. in Biostatistics.  
+ 
+Max was a Senior Director of Nonclinical Statistics at Pfizer Global R&D in Connecticut. He has been applying models in the pharmaceutical and diagnostic industries for over 18 years. 
+
+Max can be found at: 
+
+- [GitHub](https://github.com/topepo)
+- [Twitter](https://twitter.com/topepos)
+- [Mastodon](https://fosstodon.org/@topepo)
+- [LinkedIn](https://www.linkedin.com/in/max-kuhn-864a9110)
+- [Google Scholar](https://scholar.google.com/citations?user=TMDDykAAAAAJ&hl=en&oi=sra)
+
+
+### Kjell Johnson
+
+Kjell Johnson is the owner and founder of [StatTenacity](https://www.stattenacity.com/). He has a Ph.D. in Statistics at the University of Kentucky and has contributed to drug discovery projects since 1999. He also enjoys making statistics accessible to non-statisticians and teaches courses for scientists and statisticians alike, including short courses at the Society for Biomolecular Screening, American Chemical Society, and Deming Conference. 
+
+Kjell is actively involved in other statistical service activities, including past activities of chairing the Midwest Biopharmaceutical Statistics Workshop Organizing Committee in 2010 and working on the ASA’s Biopharm Executive Committee.
