--- a/posts/simulated-annealing-feature-selection/index.qmd
+++ b/posts/simulated-annealing-feature-selection/index.qmd
@@ -13,13 +13,13 @@ draft: false
 resources: "ga_sa.Rhtml"
 ---
 
-As [previously mentioned](http://appliedpredictivemodeling.com/blog/2014/11/28/caret-update), caret has two new feature selection routines based on genetic algorithms (GA) and simulated annealing (SA). The [help](http://topepo.github.io/caret/GA.html) [pages](http://topepo.github.io/caret/SA.html) for the two new functions give a detailed account of the options, syntax etc.
+As [previously mentioned](../new-version-of-caret-on-cran/), caret has two new feature selection routines based on genetic algorithms (GA) and simulated annealing (SA). The [help](http://topepo.github.io/caret/GA.html) [pages](http://topepo.github.io/caret/SA.html) for the two new functions give a detailed account of the options, syntax etc.
 
 The package already has functions to conduct feature selection using simple filters as well as recursive feature elimination (RFE). RFE can be very effective. It initially ranks the features, then removes them in sequence, starting with the least importance variables. It is a greedy method since it never backtracks to reevaluate a subset. Basically, it points itself in a single direction and proceeds. The main question is how far to go in that direction.
 
 These two new functions, `gafs` and `safs`, conduct a global search over the feature set. This means that the direction of the search is constantly changing and may re-evaluate solutions that are similar to (or the same as) previously evaluated feature sets. This is good and bad. If a feature set is not easily "rankable" then it should do better than RFE. However, it will require a larger number of model fits and has a greater chance of overfitting the features to the training set.
 
-I won't go over the details of [GAs](http://en.wikipedia.org/wiki/Genetic_algorithm) or [SA](http://en.wikipedia.org/wiki/Simulated_annealing). There are [a lot of references](http://scholar.google.com/scholar?hl=en&q=%22simulated+annealing%22+%22feature+selection%22) on these and you can always check out Chapter 19 of our book. Also, since there were [two previous](http://appliedpredictivemodeling.com/blog/2013/4/29/feature-selection-strikes-back-part-1) [blog posts](http://appliedpredictivemodeling.com/blog/2013/5/8/feature-selection-strikes-back-part-2) about genetic algorithms, I'll focus on simulated annealing in this one.
+I won't go over the details of [GAs](http://en.wikipedia.org/wiki/Genetic_algorithm) or [SA](http://en.wikipedia.org/wiki/Simulated_annealing). There are [a lot of references](http://scholar.google.com/scholar?hl=en&q=%22simulated+annealing%22+%22feature+selection%22) on these and you can always check out Chapter 19 of our book. Also, since there were [two previous](../feature-selection-strikes-back-part-1/) [blog posts](../feature-selection-2--genetic-boogaloo/) about genetic algorithms, I'll focus on simulated annealing in this one.
 
 To demonstrate I'll use the Alzheimer's disease data from Section 19.6 (page 502). It contains biomarker and patient demographic data that are being used to predict who will eventually have cognitive impairment. The original data contained instances for 333 subjects and information on 133 predictors.
 
