--- a/posts/feature-selection-3--swarm-mentality/pso.Rmd
+++ b/posts/feature-selection-3--swarm-mentality/pso.Rmd
@@ -99,7 +99,7 @@ x2index(example)
 
 "Bees don't swarm in a mango grove for nothing. Where can you see a wisp of smoke without a fire?" - Hla Stavhana
 
-In the [last](http://appliedpredictivemodeling.com/blog/2013/4/29/feature-selection-strikes-back-part-1) [two](http://appliedpredictivemodeling.com/blog/2013/5/8/feature-selection-strikes-back-part-2) posts, genetic algorithms were used as feature wrappers to search for more effective subsets of predictors. Here, I will do the same with another type of search algorithm: particle swarm optimization. 
+In the [last](../feature-selection-strikes-back-part-1/) [two](../feature-selection-2--genetic-boogaloo/) posts, genetic algorithms were used as feature wrappers to search for more effective subsets of predictors. Here, I will do the same with another type of search algorithm: particle swarm optimization. 
 
 Like genetic algorithms, this search procedure is motivated by nature phenomenon, such as the movements of bird flocks. An excellent good reference for this technique is [Poli et al (2007)](http://scholar.google.com/scholar?q=%22Particle+swarm+optimization%22+author%3APoli). The methodology was originally developed for optimizing real valued parameters, but was later adapted for discrete optimization by [Kennedy and Eberhart (1997)](http://scholar.google.com/scholar?q=%22A+discrete+binary+version+of+the+particle+swarm+algorithm%22+author%3AKennedy). 
 
