change listing image size

--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,7 @@
 listing:
   contents: posts
   date-format: YYYY-MM-DD
+  image-height: 220px
   sort: "date desc"
   type: default
   categories: false
