tweaks to article

--- a/posts/2024-02-progress-update/index.qmd
+++ b/posts/2024-02-progress-update/index.qmd
@@ -6,10 +6,14 @@ categories:
   - preprocessing
   - updates
 draft: false
-image: "prep.png"
+image: "preproc.png"
 ---
 
-Since the last update on 2023-11-20, we have a few new sections and chapters. The goal is to have good first drafts of the “Preparation” chapters. As of 2024-02-26, they are:
+![](preproc.png){fig-align="center" height="150px"}
+
+Since the last update on 2023-11-20, we have a few new sections and chapters. 
+
+The short-term goal is to have good first drafts of all of the “Preparation” chapters. As of 2024-02-26, they are:
 
  - Initial Data Splitting ([drafted](https://aml4td.org/chapters/initial-data-splitting.html))
  - Transforming Numeric Predictors ([drafted](https://github.com/aml4td/website/blob/main/chapters/numeric-predictors.qmd) but not published)
